# TotkToolkit

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  ImGui.cmake  ImGuiColorTextEdit.cmake  README.md
.devcontainer/: CMakeUserPresets.json  Dockerfile  Install-devkitpro-pacman.sh  Install.sh  devcontainer.json
.github/workflows/: cmake.yml
Docs/: ProgrammingGuide.md
Private/TotkToolkit/: TotkToolkit.cpp
Private/TotkToolkit/Configuration/: Settings.cpp
Private/TotkToolkit/IO/: Editor.cpp  FileHandle.cpp  Filesystem.cpp
Private/TotkToolkit/IO/PHYSFSCalls/: Mount.cpp  MountMemory.cpp  SetWriteDir.cpp  Unmount.cpp
Private/TotkToolkit/IO/Streams/File/: File.cpp  FileBasic.cpp
Private/TotkToolkit/IO/Streams/File/EndianReaders/: Big.h  Little.h
Private/TotkToolkit/IO/Streams/Physfs/: Physfs.cpp  PhysfsBasic.cpp
Private/TotkToolkit/IO/Streams/Physfs/EndianReaders/: Big.h  Little.h
Private/TotkToolkit/Messaging/: Notice.cpp  NoticeBoard.cpp
Private/TotkToolkit/Messaging/ExternalReceivers/IO/: Filesystem.cpp
Private/TotkToolkit/Messaging/ExternalReceivers/UI/: EditorSystem.cpp  ErrorSystem.cpp
Private/TotkToolkit/Messaging/Notices/: Error.cpp
Private/TotkToolkit/Messaging/Notices/Configuration/Settings/Change/: BfresDir.cpp  DumpDir.cpp  RomfsDir.cpp  WriteDir.cpp
Private/TotkToolkit/Messaging/Notices/Errors/UI/Windows/Editor/: ParseFailed.cpp
Private/TotkToolkit/Messaging/Notices/IO/Filesystem/: FilesChange.cpp
Private/TotkToolkit/Rendering/: DebugMessageHandler.cpp  DeviceFeatures.cpp  Framebuffer.cpp  RenderingSystem.cpp  Texture.cpp  TextureCompression.cpp
Private/TotkToolkit/Resources/: TexToGo.cpp
Private/TotkToolkit/Threading/: Task.cpp  TaskReport.cpp
Private/TotkToolkit/Threading/Tasks/IO/Filesystem/: MountArchives.cpp
Private/TotkToolkit/UI/: EditorSystem.cpp  ErrorSystem.cpp  Fonts.cpp  ImGuiItem.cpp  MainWindow.cpp  Window.cpp
Private/TotkToolkit/UI/Windows/: Editor.cpp  Window.cpp
Private/TotkToolkit/UI/Windows/Configuration/: Settings.cpp  Style.cpp
Private/TotkToolkit/UI/Windows/Editors/: BYML.cpp  PlainText.cpp  TXTG.cpp  Text.cpp  Texture.cpp
Private/TotkToolkit/UI/Windows/Filesystem/: Browser.cpp
Private/TotkToolkit/UI/Windows/Rendering/: Viewport.cpp
Public/TotkToolkit/Configuration/: Settings.h
Public/TotkToolkit/IO/: Editor.h  FileHandle.h  Filesystem.h  PHYSFSCall.h
Public/TotkToolkit/IO/PHYSFSCalls/: Mount.h  MountMemory.h  SetWriteDir.h  Unmount.h
Public/TotkToolkit/IO/Streams/File/: Big.h  File.h  FileBasic.h  Little.h
Public/TotkToolkit/IO/Streams/Physfs/: Big.h  Little.h  Physfs.h  PhysfsBasic.h
Public/TotkToolkit/Messaging/: Notice.h  NoticeBoard.h  NoticeType.h  Receiver.h
Public/TotkToolkit/Messaging/ExternalReceivers/IO/: Filesystem.h
Public/TotkToolkit/Messaging/ExternalReceivers/UI/: EditorSystem.h  ErrorSystem.h
Public/TotkToolkit/Messaging/Notices/: Error.h
Public/TotkToolkit/Messaging/Notices/Configuration/Settings/Change/: BfresDir.h  DumpDir.h  RomfsDir.h  WriteDir.h
Public/TotkToolkit/Messaging/Notices/Errors/UI/Windows/Editor/: ParseFailed.h
Public/TotkToolkit/Messaging/Notices/IO/Filesystem/: FilesChange.h
Public/TotkToolkit/Rendering/: DebugMessageHandler.h  DeviceFeatures.h  Framebuffer.h  RenderingSystem.h  Texture.h  TextureCompression.h
Public/TotkToolkit/Resources/: TexToGo.h
Public/TotkToolkit/Threading/: Task.h  TaskReport.h
Public/TotkToolkit/Threading/Mutexes/: SharedRecursive.h
Public/TotkToolkit/Threading/Tasks/IO/Filesystem/: MountArchives.h
Public/TotkToolkit/UI/: EditorSystem.h  ErrorSystem.h  Fonts.h  Icons.h  ImGuiItem.h  ImGuiUtil.h  MainWindow.h  Window.h
Public/TotkToolkit/UI/Localization/: TranslationSource.h
Public/TotkToolkit/UI/Windows/: Editor.h  Window.h
Public/TotkToolkit/UI/Windows/Configuration/: Settings.h  Style.h
Public/TotkToolkit/UI/Windows/Editors/: BYML.h  PlainText.h  TXTG.h  Text.h  Texture.h
Public/TotkToolkit/UI/Windows/Filesystem/: Browser.h
Public/TotkToolkit/UI/Windows/Rendering/: Viewport.h
